--- a/css/estilo.css
+++ b/css/estilo.css
@@ -72,7 +72,7 @@ header{
 #logo{
    width: 100px;
 }
-a{
+header>nav>ul>li>a{
    background: #00D5BC;
    color: #FFF;
    padding: 1em;
@@ -199,6 +199,20 @@ td{
    background-color: #0067B8;
    color:white;
    font-weight: bold;
+}
+
+.encuesta{
+    width:70%;
+   margin-top: 2em;
+   margin-left: auto;
+   margin-right: auto;
+   border-spacing: 0;
+   text-align: center; 
+   background-color: #0067B8;
+   color:white;
+   padding-top: 1em;
+   padding-bottom: 1em;
+   border-radius: 0.6em;
 }
 
 /*Media Queries*/
