--- a/css/estilo.css
+++ b/css/estilo.css
@@ -109,7 +109,7 @@ header>nav>ul>li>a{
 }
 #titulo{
    color: #FFF;
-   font-family: 'Sofadi One', cursive;
+   font-family: Arial, cursive;
 }
 #datos{
    text-align:left;
