--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,10 +6,9 @@ body {
    padding: 0;
 }
 #carousel-example-generic{
-	margin:auto;
    border-radius:30px;
-	
-	}
+	width: 100%;
+}
 .cntr{
 	width:100%;
 }
@@ -261,12 +260,12 @@ header>nav>ul>li>a{
 .estado{
    padding-left: 1em;
 }
-.contenedor{
-   max-width: 980px;
+/*.contenedor{
+   max-width: 100%;
    margin:0px auto  0px auto;
    position: relative;
    text-align: center;
-}
+}*/
 /*EstilosDatos*/
 .datos{
    margin: 0;
@@ -377,4 +376,37 @@ header>nav>ul>li>a{
 }
 .datos div:nth-child(2){
    text-align: left;
+}
+.cs a{
+  // border-left: 2px solid black;
+   background-color: #9c9c9c;
+   //color: red;
+}
+.usuario li{
+   list-style: none;
+   text-align: right;
+   color: rgba(0,0,0,.5);
+}
+.datos-user{
+
+   color:#262626;
+   padding-bottom:2em;
+   padding-top: .5em;
+   margin-bottom: 2em;
+   margin-top: 1em;
+   border-radius: 1em;
+   font-weight: bold;
+   background-color: rgba(255,255,255,1);
+}
+.datos-user div{
+   width: 50%;
+   text-align: left;
+   box-sizing: border-box;
+   padding-left: 2em;
+
+}
+.datos-user h2{
+   color: black;
+   text-align: center;
+
 }
